url/views/login창 수정

--- a/MapLog/templates/users/login.html
+++ b/MapLog/templates/users/login.html
@@ -34,7 +34,7 @@
 			<br>
 			<div class="signupform"> <!--회원가입폼-->
 				<p style="color:#FF6F61">계정이 없으신가요?</p>
-				<input type="button" class="Button btn-lg" value="회원가입"></input>
+				<input type="button" class="Button btn-lg" value="회원가입" onclick="location.href='{%url 'users:signup_page'%}'"></input>
 			</div>  
 		</div>         
 	</body>
