Feat: Create post (need to fix radio select)

--- a/MapLog/templates/posts/post_create.html
+++ b/MapLog/templates/posts/post_create.html
@@ -1,4 +1,5 @@
-<!-- 해나님 작성 코드 -->
+<!-- 해나님 HTML 코드 작성-->
+<!-- 소민 장고 템플릿 수정 -->
 
 {% load static %}
 <!DOCTYPE html>
@@ -25,41 +26,41 @@
   <body>  
     <div class = container1>
       <div class = container2><br>
-        <form action = "logread.html">
-        &emsp;&ensp; <!-- &nbsp : 1칸 띄어쓰기, &ensp; 2칸 띄어쓰기, &emsp; 3칸 띄어쓰기 -->
-    
-        <span style='font-size:55px;'>&#128221;</span> <br><br>  <!-- 이모티콘 붙이기 -->
-        <h6 style="display:inline">제목 : </h6> <input type="text" id="title" class = "box1" name="title"><br>
-        <!-- style="display:inline" : head 태그에서 줄바꿈 없애기-->
+        <form action="{% url 'posts:post_create' %}">
+          &emsp;&ensp; <!-- &nbsp : 1칸 띄어쓰기, &ensp; 2칸 띄어쓰기, &emsp; 3칸 띄어쓰기 -->
+      
+          <span style='font-size:55px;'>&#128221;</span> <br><br>  <!-- 이모티콘 붙이기 -->
+          <h6 style="display:inline">제목 : </h6> <input type="text" id="title" class="box1" name="title"><br>
+          <!-- style="display:inline" : head 태그에서 줄바꿈 없애기-->
 
-        <h6 style="display: inline">날짜 : </h6> <input type="date" class = "box1" name="date"><br>
-        <h6 style="display:inline">음악 : </h6> <input type="text" class = "box1" name="music"><br><br>
-        <h6 style="display:inline">로그 : </h6> <textarea id="log" name="write" class="box2" rows=5></textarea><br>
-        <h6 style="display:inline">사진 : </h6> <input type="file" class="box3" name="photo"><br>
-        
+          <h6 style="display: inline">날짜 : </h6> <input type="date" class="box1" name="pick_date"><br>
+          <h6 style="display:inline">음악 : </h6> <input type="text" class="box1" name="music"><br><br>
+          <h6 style="display:inline">로그 : </h6> <textarea id="log" class="box2" name="description" rows=5></textarea><br>
+          <h6 style="display:inline">사진 : </h6> <input type="file" class="box3" name="image"><br>
+          
 
 
-        <div class = "container4" style="float:right;">    <!-- 이모티콘 박스 -->
-          &emsp; &nbsp;
-            <fieldset>    <!-- 이미지 체크박스 -->
+          <div class = "container4" style="float:right;">    <!-- 이모티콘 박스 -->
+            &emsp; &nbsp;
+              <fieldset>    <!-- 이미지 체크박스 -->
+                
+                <span style='font-size:35px;'>&#128522;</span> &emsp; &emsp;
+                <span style='font-size:35px;'>&#128528;</span> <br> &nbsp; &nbsp;
+                <input id="check1" type="radio" name="gener" value="happy" class="box5"> &nbsp; &emsp; &nbsp; &emsp; &nbsp; &nbsp; <!-- name 속성 : 한 개만 선택되도록-->
+                <input id="check2" type="radio" name="gener" value="soso" class="box5"> <br>
+                
+                <span style='font-size:35px;'>&#128557;</span> &emsp; &emsp;
+                <span style='font-size:35px;'>&#128545;</span> <br> &nbsp; &nbsp;
+                <input id="check3" type="radio" name="gener"value="sad" class="box5"> &nbsp; &emsp; &nbsp; &emsp; &nbsp; &nbsp;
+                <input id="check4" type="radio" name="gener" value="angry" class="box5">
+          
+              </fieldset>
               
-              <span style='font-size:35px;'>&#128522;</span> &emsp; &emsp;
-              <span style='font-size:35px;'>&#128528;</span> <br> &nbsp; &nbsp;
-              <input id="check1" type="radio" name="gener" value="happy" class="box5"> &nbsp; &emsp; &nbsp; &emsp; &nbsp; &nbsp; <!-- name 속성 : 한 개만 선택되도록-->
-              <input id="check2" type="radio" name="gener" value="soso" class="box5"> <br>
-              
-              <span style='font-size:35px;'>&#128557;</span> &emsp; &emsp;
-              <span style='font-size:35px;'>&#128545;</span> <br> &nbsp; &nbsp;
-              <input id="check3" type="radio" name="gener"value="sad" class="box5"> &nbsp; &emsp; &nbsp; &emsp; &nbsp; &nbsp;
-              <input id="check4" type="radio" name="gener" value="angry" class="box5">
-        
-            </fieldset>
-            
-        </div>
-    
-        <div id = "container3" style='width:150px;float:right;'>   <!-- 버튼 오른쪽 정렬 -->
-            <input type="submit" onclick="getInputValue();" id="submit" class = "box4" value="저장">
-        </div> 
+          </div>
+      
+          <div id = "container3" style='width:150px;float:right;'>   <!-- 버튼 오른쪽 정렬 -->
+              <input type="submit" id="submit" class = "box4" value="저장">
+          </div> 
       </form>
   </body>
 </html>
