--- a/MapLog/static/styles/post_map.css
+++ b/MapLog/static/styles/post_map.css
@@ -2,7 +2,7 @@
 .map_wrap * {
   margin: 0;
   padding: 0;
-  font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;
+  font-family: 'Do Hyeon', sans-serif;
   font-size: 12px;
 }
 .map_wrap a,
@@ -11,15 +11,15 @@
   color: #000;
   text-decoration: none;
 }
-.map_wrap {
-  position: relative;
-  width: 100%;
-  height: 500px;
+#map {
+  left: 50%;
+  margin-left: -150px;
+  margin-top: 70px;
 }
 #menu_wrap {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 70px;
+  left: 300px;
   bottom: 0;
   width: 250px;
   margin: 10px 0 30px 10px;
