--- a/MapLog/templates/posts/post_map.html
+++ b/MapLog/templates/posts/post_map.html
@@ -4,12 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="{% static 'styles/post_map.css' %}">
-	<title>Document</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+  <title>map page</title>
 </head>
 <body>
 	<div class="map_wrap">
-		<div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
-	
+		<div id="map" style="width:640px;height:640px;position:relative;overflow:hidden;"></div>
 		<div id="menu_wrap" class="bg_white">
 			<div class="option">
 				<div>
