Feat: Add marker image on map

--- a/MapLog/templates/posts/map_search.html
+++ b/MapLog/templates/posts/map_search.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="{% static 'styles/post_map.css' %}">
+	<link rel="stylesheet" href="{% static 'styles/map_search.css' %}">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
   <title>map page</title>
@@ -27,6 +27,6 @@
 	</div>
 	
 	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=8473586f2a4919e8cf90580a8334ebbc&libraries=services"></script>
-	<script src="/static/js/post_map.js"></script>
+	<script src="/static/js/map_search.js"></script>
 	</body>
 </html>
