--- a/MapLog/templates/partials/navbar.html
+++ b/MapLog/templates/partials/navbar.html
@@ -1,14 +1,13 @@
 {% load static %}
 <nav>
   <div class="navbar__container">
-    <div class="logo">🗺️</div>
+    <a href="#"><img class="logo" src="../../static/images/logo.png"></a>
+    
     <div class="category">
-      <ul class="nav__links">
-        <li><a href="#">소개</a></li>
-        <li><a href="#">지원</a></li>
-        <li class="seperator">|</li>
-        <li><a href="#"><img class="profile__pic" src="../../static/images/profile_pic.png">프로필</a></li>
-      </ul>
+      <a href="#"><span class="text">소개</span></a>
+      <a href="#"><span class="text"> 지원</span></a>
+      <span class="seperator text">|</span>
+      <a href="#"><span><img class="profile__pic" src="../../static/images/profile_pic.png">프로필</span></a>
     </div>
   </div>
 </nav>
