--- a/MapLog/static/styles/map_marker.css
+++ b/MapLog/static/styles/map_marker.css
@@ -1,13 +1,8 @@
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+#map {
+  margin: 0;
+  padding: 0;
   font-family: 'Do Hyeon', sans-serif;
   font-size: 12px;
-}
-#map {
-  margin-top: 70px;
-  border-radius: 10px;
 }
 .overlaybox {
   position: relative;
