--- a/MapLog/templates/posts/map_search.html
+++ b/MapLog/templates/posts/map_search.html
@@ -2,6 +2,7 @@
 
 {% block css %}
 	<link rel="stylesheet" href="{% static 'styles/map_search.css' %}" />
+  <link rel="stylesheet" href="{% static 'styles/partials/navbar.css' %}" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
 	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet"/>
 {% endblock %} 
@@ -12,7 +13,7 @@
 
 {% block content %}
   <div class="map_wrap">
-    <div id="map" style="width:640px;height:640px;position:relative;overflow:hidden;"></div>
+    <div id="map" style="width:100%;height:95%;"></div>
     <div id="menu_wrap" class="bg_white">
       <div class="option">
         <div>
