Design: Add CSS my page - account info - info container

--- a/MapLog/static/styles/acc_info.css
+++ b/MapLog/static/styles/acc_info.css
@@ -43,5 +43,28 @@
   height: 85%;
   left: 65vh;
   background-color: #fff1f0;
+  color: #762e27;
   display: inline-block;
+}
+
+.title {
+  position: absolute;
+  left: 10vh;
+  top: 4vh;
+  font-size: 6vh;
+}
+
+.content {
+  position: absolute;
+  left: 7.5vh;
+  top: 20vh;
+  font-size: 2.5vh;
+}
+
+.content div {
+  margin: 3vh;
+}
+
+.key {
+  font-weight: bold;
 }
