--- a/MapLog/templates/users/my_page/acc_info.html
+++ b/MapLog/templates/users/my_page/acc_info.html
@@ -3,6 +3,7 @@
 {% block css %}
 	<link rel="stylesheet" href="{% static 'styles/acc_info.css' %}" />
 	<link rel="stylesheet" href="{% static 'styles/partials/navbar.css' %}" />
+  <link rel="stylesheet" href="{% static 'styles/partials/footer.css' %}" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
 	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet"/>
 {% endblock %} 
@@ -40,3 +41,6 @@
   </div>
 {% endblock %} 
 
+{% block footer %} 
+	{% include "partials/footer.html" %}
+{% endblock %} 
