--- a/MapLog/templates/posts/map_search.html
+++ b/MapLog/templates/posts/map_search.html
@@ -3,7 +3,8 @@
 {% block css %}
 	<link rel="stylesheet" href="{% static 'styles/map_search.css' %}" />
   <link rel="stylesheet" href="{% static 'styles/partials/navbar.css' %}" />
-	<link rel="preconnect" href="https://fonts.gstatic.com" />
+	<link rel="stylesheet" href="{% static 'styles/partials/footer.css' %}" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
 	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet"/>
 {% endblock %} 
 
@@ -13,7 +14,7 @@
 
 {% block content %}
   <div class="map_wrap">
-    <div id="map" style="width:100%;height:95%;"></div>
+    <div id="map" style="width:100%;height:84%;"></div>
     <div id="menu_wrap" class="bg_white">
       <div class="option">
         <div>
@@ -34,3 +35,7 @@
 	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=8473586f2a4919e8cf90580a8334ebbc&libraries=services"></script>
 	<script src="/static/js/map_search.js"></script>
 {% endblock javascript %}
+
+{% block footer %} 
+	{% include "partials/footer.html" %}
+{% endblock %} 
