--- a/MapLog/templates/menu/about_us.html
+++ b/MapLog/templates/menu/about_us.html
@@ -3,7 +3,8 @@
 {% block css %}
 	<link rel="stylesheet" href="{% static 'styles/about_us.css' %}" />
 	<link rel="stylesheet" href="{% static 'styles/partials/navbar.css' %}" />
-	<link rel="preconnect" href="https://fonts.gstatic.com" />
+	<link rel="stylesheet" href="{% static 'styles/partials/footer.css' %}" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
 	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet"/>
 {% endblock %} 
 
@@ -87,3 +88,6 @@
   <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 {% endblock javascript %}
 
+{% block footer %} 
+	{% include "partials/footer.html" %}
+{% endblock %} 
