--- a/MapLog/templates/posts/map_marker.html
+++ b/MapLog/templates/posts/map_marker.html
@@ -3,6 +3,7 @@
 {% block css %}
 	<link rel="stylesheet" href="{% static 'styles/map_marker.css' %}" />
 	<link rel="stylesheet" href="{% static 'styles/partials/navbar.css' %}" />
+	<link rel="stylesheet" href="{% static 'styles/test_overlay.css'%}" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
 	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet"/>
 {% endblock %} 
