Feat: Add hypertext reference inside all of a tags
모든 a 태그에 링크 지정

--- a/MapLog/templates/users/my_page/by_date.html
+++ b/MapLog/templates/users/my_page/by_date.html
@@ -16,9 +16,9 @@
   <div class="menubar">
     <img src="../../static/images/profile_pic.png">
     <div class="menu">
-      <a href="#">회원 정보</a>
-      <a class="selected" href="#">날짜별로 모아보기</a>
-      <a href="#">기분별로 모아보기</a>
+      <a href="/users/my-page/acc-info">회원 정보</a>
+      <a class="selected" href="/users/my-page/by-date">날짜별로 모아보기</a>
+      <a href="/users/my-page/by-mood">기분별로 모아보기</a>
     </div>
   </div>
 
