--- a/MapLog/templates/partials/navbar.html
+++ b/MapLog/templates/partials/navbar.html
@@ -4,8 +4,8 @@
     <a href="#"><img class="logo" src="../../static/images/logo.png"></a>
     
     <div class="category">
-      <a href="#"><span class="text">소개</span></a>
-      <a href="#"><span class="text"> 지원</span></a>
+      <a href="/about-us"><span class="text">소개</span></a>
+      <a href="/support"><span class="text"> 지원</span></a>
       <span class="seperator text">|</span>
       <a href="#"><span><img class="profile__pic" src="../../static/images/profile_pic.png">프로필</span></a>
     </div>
