--- a/MapLog/templates/users/my_page/acc_info.html
+++ b/MapLog/templates/users/my_page/acc_info.html
@@ -17,9 +17,9 @@
 	<div class="menubar">
     <img src="../../static/images/profile_pic.png">
     <div class="menu">
-      <a class="selected" href="#">회원 정보</a>
-      <a href="#">날짜별로 모아보기</a>
-      <a href="#">기분별로 모아보기</a>
+      <a class="selected" href="/users/my-page/acc-info">회원 정보</a>
+      <a href="/users/my-page/by-date">날짜별로 모아보기</a>
+      <a href="/users/my-page/by-mood">기분별로 모아보기</a>
     </div>
   </div>
 
