Design: Add CSS support page

--- a/MapLog/templates/menu/support.html
+++ b/MapLog/templates/menu/support.html
@@ -14,8 +14,11 @@
 
 {% block content %}
   <div class="support__container">
-    <h1>무엇을 도와드릴까요?</h1>
-    <input type="text" id="support_search" name="support_search" value="🔍검색하기">
+
+    <div class="search__container">
+      <h1>무엇을 도와드릴까요?</h1>
+      <input type="text" id="support_search" name="support_search" placeholder="🔍검색하기">
+    </div>
 
     <div class="faq__container">
       <div class="faq">
