Design: Add memeber memoji image

--- a/MapLog/templates/menu/about_us.html
+++ b/MapLog/templates/menu/about_us.html
@@ -31,7 +31,7 @@
     <div class="team__container spacing inline size">
       <h2>MapLog 팀은요,,</h2>
       <div class="member inline">
-        <img src="../../static/images/som_memoji.png">
+        <img src="../../static/images/hn_memoji.jpg">
         <p>김해나</p>
         <p>명지대학교 정보통신공학과</p>
         <div class="icons">
@@ -41,7 +41,7 @@
       </div>
 
       <div class="member inline">
-        <img src="../../static/images/som_memoji.png">
+        <img src="../../static/images/soojeong_memoji.png">
         <p>김수정</p>
         <p>명지대학교 정보통신공학과</p>
         <div class="icons">
@@ -51,7 +51,7 @@
       </div>
 
       <div class="member inline">
-        <img src="../../static/images/som_memoji.png">
+        <img src="../../static/images/dabin_memoji.jpg">
         <p>나다빈</p>
         <p>명지대학교 전자공학과</p>
         <div class="icons">
