Style: Modify footer

--- a/MapLog/static/styles/partials/footer.css
+++ b/MapLog/static/styles/partials/footer.css
@@ -1,9 +1,8 @@
 .footer__container {
-  position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
   text-align: center;
-  color: #b2b2b2;
+  color: #8a8080;
   background: white;
 }
