--- a/MapLog/static/styles/main.css
+++ b/MapLog/static/styles/main.css
@@ -112,8 +112,15 @@ button {
   color: #440600;
   background-color: white;
   border: none;
+  border-radius: 10px;
   box-shadow: 0px 6px 6px -6px #b4b4b4;
   cursor: pointer;
+  transition: color 0.3s ease-in-out;
+}
+
+.pr__message button:hover {
+  background-color: #ff6f61;
+  color: white;
 }
 
 .pr__container .favicon {
