Design: Modify footer - main page

--- a/MapLog/static/styles/main.css
+++ b/MapLog/static/styles/main.css
@@ -136,3 +136,10 @@ button {
   cursor: pointer;
   opacity: 100%;
 }
+
+footer {
+  width: 100%;
+  text-align: center;
+  color: #b2b2b2;
+  background: white;
+}
