--- a/MapLog/templates/main.html
+++ b/MapLog/templates/main.html
@@ -40,11 +40,11 @@
       <span class="favicon"><i class="fas fa-caret-square-up"></i></span>
     </div>
   </div>
-{% endblock %} 
 
-{% block footer %} 
-	{% include "partials/footer.html" %}
-{% endblock %}
+  <footer>
+    <h5>© 2021 MJU_LikeLion MapLog</h5>
+  </footer>
+{% endblock %} 
 
 {% block javascript %}
 	<script src="/static/js/main.js"></script>
