--- a/MapLog/templates/posts/post_create.html
+++ b/MapLog/templates/posts/post_create.html
@@ -61,6 +61,8 @@
           <div id = "container3" style='width:150px;float:right;'>   <!-- 버튼 오른쪽 정렬 -->
               <input type="submit" id="submit" class = "box4" value="저장">
           </div> 
-      </form>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
