--- a/MapLog/templates/posts/map_search.html
+++ b/MapLog/templates/posts/map_search.html
@@ -51,20 +51,17 @@
 
           <div class = "container4" style="float:right;">    <!-- 이모티콘 박스 -->
             &emsp; &nbsp;
-              <fieldset>    <!-- 이미지 체크박스 -->
-                
+              <fieldset>
                 <span style='font-size:35px;'>&#128522;</span> &emsp; &emsp;
-                <span style='font-size:35px;'>&#128528;</span> <br> &nbsp; &nbsp;
-                <input id="check1" type="radio" name="gener" value="happy" class="box5"> &nbsp; &emsp; &nbsp; &emsp; &nbsp; &nbsp; <!-- name 속성 : 한 개만 선택되도록-->
-                <input id="check2" type="radio" name="gener" value="soso" class="box5"> <br>
-                
+                <span style='font-size:35px;'>&#128528;</span><br> &nbsp; &nbsp;
+                <input id="check1" type="radio" name="mood" value="happy" class="box5"> &nbsp; &emsp; &nbsp; &emsp; &nbsp; &nbsp;
+                <input id="check2" type="radio" name="mood" value="soso" class="box5"><br>
+
                 <span style='font-size:35px;'>&#128557;</span> &emsp; &emsp;
                 <span style='font-size:35px;'>&#128545;</span> <br> &nbsp; &nbsp;
-                <input id="check3" type="radio" name="gener"value="sad" class="box5"> &nbsp; &emsp; &nbsp; &emsp; &nbsp; &nbsp;
-                <input id="check4" type="radio" name="gener" value="angry" class="box5">
-          
+                <input id="check3" type="radio" name="mood" value="sad" class="box5"> &nbsp; &emsp; &nbsp; &emsp; &nbsp; &nbsp;
+                <input id="check4" type="radio" name="mood" value="angry" class="box5">
               </fieldset>
-              
           </div>
       
           <div id = "container3" style='width:150px;float:right;'>   <!-- 버튼 오른쪽 정렬 -->
