Feat: Insert location info value into form

--- a/MapLog/templates/posts/post_detail.html
+++ b/MapLog/templates/posts/post_detail.html
@@ -26,9 +26,10 @@
         &emsp;&ensp; <!-- &nbsp : 1칸 띄어쓰기, &ensp; 2칸 띄어쓰기, &emsp; 3칸 띄어쓰기 -->
     
         <span style='font-size:55px;'>&#128221;</span> <br><br>  <!-- 이모티콘 붙이기 -->
-        <h6 style="display:inline">제목 : </h6> <p>{{details.title}}</p><br>
-        <!-- style="display:inline" : head 태그에서 줄바꿈 없애기-->
+        <h6 style="display:inline">위도 : </h6> <p>{{details.lat}}</p><br>
+        <h6 style="display:inline">경도 : </h6> <p>{{details.lng}}</p><br>
 
+        <h6 style="display:inline">제목 : </h6> <p>{{details.title}}</p><br>
         <h6 style="display:inline">날짜 : </h6> <p>{{details.pick_date}}</p>
         <h6 style="display:inline">기분 : </h6> <p>{{details.mood}}</p>
         <h6 style="display:inline">음악 : </h6> <p>{{details.music}}</p><br>
