위경도 views.py수정

--- a/MapLog/templates/posts/map_search.html
+++ b/MapLog/templates/posts/map_search.html
@@ -40,8 +40,8 @@
           {% csrf_token %}
           <span style='font-size:55px;'>&#128221;</span> <br><br>  <!-- 이모티콘 붙이기 -->
 
-          <h6 style="display:inline">위도 : </h6> <input type="text" class="box1 lat_form" name="lat_form"><br>
-          <h6 style="display:inline">경도 : </h6> <input type="text" class="box1 lng_form" name="lng_form"><br><br>
+          <h6 style="display:inline">위도 : </h6> <input type="text" class="box1 lat_form" name="lat_form" value="lat_form"><br>
+          <h6 style="display:inline">경도 : </h6> <input type="text" class="box1 lng_form" name="lng_form" value="lng_form"><br><br>
 
           <h6 style="display:inline">제목 : </h6> <input type="text" id="title" class="box1" name="title"><br>
           <h6 style="display: inline">날짜 : </h6> <input type="date" class="box1" name="pick_date"><br>
